--- a/src/sass/_main-page.scss
+++ b/src/sass/_main-page.scss
@@ -4,12 +4,66 @@
   margin: 0 auto;
   width: 100%;
   height: 100vh;
+  &__background {
+    @include background-noise;
+    opacity: 1;
+    visibility: visible;
+    .lines {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 100%;
+      margin: auto;
+      width: 100%;
+    }
+    .line {
+      position: absolute;
+      width: 1px;
+      height: 100%;
+      top: 0;
+      left: 50%;
+      background: rgba(255, 255, 255, 0.1);
+      overflow: hidden;
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        height: 15vh;
+        width: 100%;
+        top: -50%;
+        left: 0;
+        background: linear-gradient(
+          to bottom,
+          rgba(255, 255, 255, 0) 0%,
+          #ffffff 75%,
+          #ffffff 100%
+        );
+        animation: drop 7s 0s infinite;
+        animation-fill-mode: forwards;
+        animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+      }
+      &:nth-child(1) {
+        margin-left: -25%;
+        &::after {
+          animation-delay: 2s;
+        }
+      }
+      &:nth-child(3) {
+        margin-left: 25%;
+        &::after {
+          animation-delay: 2.5s;
+        }
+      }
+    }
+  }
+
   &__shadow {
     width: 100%;
     height: calc(100vh - calc(2 * 76px));
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
-    top: 0%;
+    top: 0;
     left: auto;
     border-radius: 20px;
     transform-origin: center bottom;
@@ -27,8 +81,11 @@
     transform-origin: center bottom;
     animation: showImageIntro 1s 1s linear both;
     overflow: hidden;
-    @media (min-width: 768px) {
+    @media (min-width: 450px) {
       background-image: url('../images/intro-lg.jpg');
+    }
+    @media (min-width: 800px) {
+      background-image: url('../images/intro-xl.jpg');
     }
   }
   &__titles {
@@ -59,6 +116,52 @@
     @media (min-width: 1200px) {
       font-size: 10rem;
     }
+  }
+}
+
+@keyframes drop {
+  0% {
+    top: -50%;
+  }
+
+  100% {
+    top: 110%;
+  }
+}
+
+@keyframes bg-animation {
+  0% {
+    transform: translate(0, 0);
+  }
+  10% {
+    transform: translate(-5%, -5%);
+  }
+  20% {
+    transform: translate(-10%, 5%);
+  }
+  30% {
+    transform: translate(5%, -10%);
+  }
+  40% {
+    transform: translate(-5%, 15%);
+  }
+  50% {
+    transform: translate(-10%, 5%);
+  }
+  60% {
+    transform: translate(15%, 0);
+  }
+  70% {
+    transform: translate(0, 10%);
+  }
+  80% {
+    transform: translate(-15%, 0);
+  }
+  90% {
+    transform: translate(10%, 5%);
+  }
+  100% {
+    transform: translate(5%, 0);
   }
 }
 
