--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -1,11 +1,23 @@
 .nav {
   background-color: var(--primary-nav-background);
   backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 10;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    filter: blur(15px);
+    pointer-events: none;
+  }
 
   &__wrapper {
     position: relative;
